@@ -98,6 +98,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Implemented: Incremental Counter sensor (thanks to ikkemaniac)
 - Implemented: Kodi notification system (thanks to dnpwwo)
 - Implemented: SolarMax inverter with Lan interface
+- Implemented: Current sensors now also display actual state in caption
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
